# neural_categorizer

./: CMakeLists.txt  main.cpp
categorizer/: BlackBoxCategorizer.h  NeuralCategorizer.h  TensorTransformer.h
